[package]
edition = "2021"
name = "yew-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.2"
log = "0.4.6"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.56", features = [
  "DataTransfer",
  "DataTransferItemList",
  "DataTransferItem",
  "Document",
  "Element",
  "Node",
  "HtmlElement",
  "HtmlImageElement",
  "Url",
  'Blob',
  'HtmlCanvasElement',
  'ImageData',
  'CanvasRenderingContext2d'
]}
yew = "0.19"
image = "0.23.14"
imageproc="0.22.0"
lazy_static="1.4.0"
hex="0.4.3"